Fixed select box triangle position on firefox

--- a/scss/foundation/components/_forms.scss
+++ b/scss/foundation/components/_forms.scss
@@ -324,10 +324,7 @@ $select-bg-color: #fafafa;
       padding: $form-spacing / 2;
       font-size: $input-font-size;
       @include radius(0);
-
-      &.radius {
-        @include radius($global-radius);
-      }
+      &.radius { @include radius($global-radius); }
       &:hover {
         background: 
           darken($select-bg-color, 3%) 
@@ -337,7 +334,10 @@ $select-bg-color: #fafafa;
         border-color: $input-focus-border-color;
       }
     }
-
+    @-moz-document url-prefix() {
+      select { background: $select-bg-color; }
+      select:hover { background: darken($select-bg-color, 3%); }
+    }
     /* Attach elements to the beginning or end of an input */
     .prefix,
     .postfix { @include prefix-postfix-base; }
@@ -467,9 +467,6 @@ $select-bg-color: #fafafa;
     textarea.error {
       margin-bottom: 0;
     }
-
-
     label.error { @include form-label-error-color; }
-
   }
 }
